# quickpass

./: .mergify.yml  Readme.md  main.py  pyproject.toml
