[tool.poetry]
name = "quickpass"
version = "0.1.0"
description = "Quickly generate passwords on the command line"
authors = ["Adam Peacock <adam@thepeacock.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
autopep8 = "^1.5.7"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
