[project]
name = "quickpass"
version = "0.1.0"
description = "Quickly generate passwords on the command line"
authors = [{ name = "Adam Peacock", email = "adam@thepeacock.net" }]
dependencies = []
requires-python = "<4.0,>=3.9"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pylint<3.0.0,>=2.10.2",
    "autopep8<2.0.0,>=1.5.7",
    "rope<1.0.0,>=0.19.0",
    "mypy<1.0,>=0.942",
]

[tool.pdm.build]
includes = []
